+ add message when starting playtime recording